Revert "Merge pull request #1 from dkgnim/master"
This reverts commit 3367d042b8dde42e712c4524c1e8831b77e3607c, reversing
changes made to f7111c8e79ef902bbb8e65b9a7de3731dcd22c62.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         docker_web:
                 volumes:
                         - myapp:/usr/local/tomcat/webapps/
-                image: tomcat:latest
+                build: docker_web/
                 command: "/usr/local/tomcat/bin/catalina.sh run"
                 ports:
                         - "8080:8080"
